--- a/style.css
+++ b/style.css
@@ -262,7 +262,8 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: var(--space-m);
-        margin-bottom: var(--space-m)
+        margin-bottom: var(--space-m);
+        filter: drop-shadow(0 25px 25px hsla(183, 100%, 15%, 0.15));
     }
 
     img.logo {
